defconfig:Disable Useless feature

--- a/arch/arm64/configs/A72_c12.1_mod_defconfig
+++ b/arch/arm64/configs/A72_c12.1_mod_defconfig
@@ -49,7 +49,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="aarch64-linux-android-"
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION="-Coconutat_Ian-perf-"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -1746,7 +1746,7 @@ CONFIG_GZ_LOG=y
 CONFIG_MTK_TEE_SANITY=y
 CONFIG_MTK_SECURITY_SW_SUPPORT=y
 # CONFIG_MTK_SEC_MODEM_NVRAM_ANTI_CLONE is not set
-CONFIG_MTK_AVB20_SUPPORT=y
+# CONFIG_MTK_AVB20_SUPPORT is not set
 # CONFIG_MTK_IN_HOUSE_TEE_SUPPORT is not set
 
 #
@@ -1862,13 +1862,13 @@ CONFIG_MTK_CHIP=y
 # MTK load balance and schedule enhancement
 #
 CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT=y
-CONFIG_MTK_SCHED_INTEROP=y
+# CONFIG_MTK_SCHED_INTEROP is not set
 # CONFIG_MTK_SCHED_TRACE is not set
 
 #
 # MTK Energy Aware Scheduler Plus
 #
-CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
+# CONFIG_MTK_SCHED_EAS_POWER_SUPPORT is not set
 # CONFIG_MTK_SCHED_MULTI_GEARS is not set
 
 #
@@ -1879,14 +1879,14 @@ CONFIG_SCHED_HMP_PRIO_FILTER=y
 CONFIG_SCHED_HMP_PRIO_FILTER_VAL=5
 # CONFIG_HMP_FREQUENCY_INVARIANT_SCALE is not set
 CONFIG_SCHED_HMP_PLUS=y
-CONFIG_MTK_SCHED_BOOST=y
+# CONFIG_MTK_SCHED_BOOST is not set
 
 #
 # MTK runqueue statistic calculation
 #
-CONFIG_MTK_SCHED_RQAVG_KS=y
-CONFIG_MTK_SCHED_RQAVG_US=y
-CONFIG_MTK_SCHED_CPULOAD=y
+# CONFIG_MTK_SCHED_RQAVG_KS is not set
+# CONFIG_MTK_SCHED_RQAVG_US is not set
+# CONFIG_MTK_SCHED_CPULOAD is not set
 # CONFIG_MTK_SCHED_SYSHINT is not set
 # CONFIG_MTK_RT_THROTTLE_MON is not set
 CONFIG_MTK_AUDIO_IPI=y
@@ -1944,7 +1944,7 @@ CONFIG_MTK_LOAD_TRACKER=y
 CONFIG_MTK_CPU_CTRL_CFP=y
 CONFIG_MTK_PERF_OBSERVER=y
 CONFIG_MTK_RESYM=y
-CONFIG_MTK_FPSGO_V3=y
+# CONFIG_MTK_FPSGO_V3 is not set
 CONFIG_MTK_EARA_THERMAL=y
 # CONFIG_MTK_EARA_AI is not set
 CONFIG_MTK_GBE=y
@@ -2144,7 +2144,7 @@ CONFIG_DM_SNAPSHOT=y
 # CONFIG_DM_DELAY is not set
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
-CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY is not set
 CONFIG_DM_VERITY_FEC=y
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
@@ -2598,10 +2598,10 @@ CONFIG_OPLUS_FINGERPRINT_JIIOV_OPTICAL=y
 # CONFIG_OPLUS_FINGERPRINT_CDFPS is not set
 # CONFIG_OPLUS_FINGERPRINT_NAVIGATION_ENABLE is not set
 # CONFIG_OPLUS_FINGERPRINT_ENABLE_TEE_BINDERCORE is not set
-CONFIG_OPLUS_SECURE=y
-CONFIG_OPLUS_SECURE_COMMON=y
+# CONFIG_OPLUS_SECURE is not set
+# CONFIG_OPLUS_SECURE_COMMON is not set
 # CONFIG_OPLUS_SECURE_QCOM is not set
-CONFIG_OPLUS_SECURE_MTK=y
+# CONFIG_OPLUS_SECURE_MTK is not set
 
 #
 # Character devices
@@ -4700,12 +4700,12 @@ CONFIG_OPLUS_FEATURE_PROJECTINFO=y
 # CONFIG_OPLUS_FEATURE_QCOM_PMICWD is not set
 # CONFIG_OPLUS_FEATURE_MM_OSVELTE is not set
 # CONFIG_OPLUS_FEATURE_DUMP_REASON is not set
-CONFIG_OPLUS_FEATURE_MM_FEEDBACK=y
+# CONFIG_OPLUS_FEATURE_MM_FEEDBACK is not set
 # CONFIG_OPLUS_FEATURE_QCOM_WATCHDOG is not set
 CONFIG_OPLUS_FEATURE_ACM=y
 CONFIG_OPLUS_FEATURE_ACM_LOGGING=y
 CONFIG_OPLUS_FEATURE_THEIA=y
-CONFIG_OPLUS_FEATURE_SELINUX_CONTROL_LOG=y
+# CONFIG_OPLUS_FEATURE_SELINUX_CONTROL_LOG is not set
 # CONFIG_OPLUS_FEATURE_MISC is not set
 # CONFIG_PARAM_READ_WRITE is not set
 # CONFIG_BOOTLOADER_LOG is not set
@@ -5134,7 +5134,7 @@ CONFIG_NVMEM=y
 # FSI support
 #
 # CONFIG_FSI is not set
-CONFIG_TEE=y
+# CONFIG_TEE is not set
 
 #
 # TEE drivers
@@ -5537,7 +5537,7 @@ CONFIG_PROBE_EVENTS=y
 # CONFIG_RING_BUFFER_STARTUP_TEST is not set
 # CONFIG_TRACE_EVAL_MAP_FILE is not set
 CONFIG_TRACING_EVENTS_GPIO=y
-CONFIG_MTK_SCHED_TRACERS=y
+# CONFIG_MTK_SCHED_TRACERS is not set
 # CONFIG_MTK_FTRACE_DEFAULT_ENABLE is not set
 # CONFIG_MTK_KERNEL_MARKER is not set
 # CONFIG_DMA_API_DEBUG is not set
