--- a/arch/arm64/configs/A72_c12.1_mod_defconfig
+++ b/arch/arm64/configs/A72_c12.1_mod_defconfig
@@ -123,7 +123,7 @@ CONFIG_RCU_NEED_SEGCBLIST=y
 CONFIG_BUILD_BIN2C=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
-CONFIG_IKHEADERS=m
+CONFIG_IKHEADERS=y
 CONFIG_LOG_BUF_SHIFT=21
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=12
 CONFIG_PRINTK_SAFE_LOG_BUF_SHIFT=13
@@ -776,8 +776,8 @@ CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_TCP_CONG_WESTWOOD=m
-CONFIG_TCP_CONG_HTCP=m
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
 # CONFIG_TCP_CONG_HSTCP is not set
 # CONFIG_TCP_CONG_HYBLA is not set
 # CONFIG_TCP_CONG_VEGAS is not set
@@ -830,7 +830,7 @@ CONFIG_NETWORK_SECMARK=y
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
-CONFIG_BRIDGE_NETFILTER=m
+CONFIG_BRIDGE_NETFILTER=y
 
 #
 # Core Netfilter Configuration
@@ -1168,7 +1168,7 @@ CONFIG_NET_FLOW_LIMIT=y
 # CONFIG_NET_DROP_MONITOR is not set
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
-# CONFIG_BT is not set
+CONFIG_BT=y
 # CONFIG_AF_RXRPC is not set
 # CONFIG_AF_KCM is not set
 # CONFIG_STREAM_PARSER is not set
@@ -1194,7 +1194,7 @@ CONFIG_MAC80211_STA_HASH_MAX_SIZE=0
 # CONFIG_NET_9P is not set
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
-# CONFIG_NFC is not set
+CONFIG_NFC=y
 CONFIG_OPLUS_NFC=y
 CONFIG_NFC_PN553_DEVICES=y
 CONFIG_NXP_P73_DEVICES=y
@@ -1709,7 +1709,7 @@ CONFIG_MTK_MIX_DEVICES=y
 CONFIG_MTK_CONN_MD=y
 CONFIG_MTK_BTIF=y
 CONFIG_MTK_MDDP_SUPPORT=y
-# CONFIG_NFC_CHIP_SUPPORT is not set
+CONFIG_NFC_CHIP_SUPPORT=y
 CONFIG_MTK_NFC_CLKBUF_ENABLE=y
 
 #
@@ -2286,6 +2286,7 @@ CONFIG_USB_NET_ZAURUS=y
 # CONFIG_USB_VL600 is not set
 # CONFIG_USB_NET_CH9200 is not set
 CONFIG_WLAN=y
+CONFIG_WLAN_DRV_BUILD_IN=y
 # CONFIG_WIRELESS_WDS is not set
 CONFIG_WLAN_VENDOR_ADMTEK=y
 CONFIG_WLAN_VENDOR_ATH=y
@@ -3551,7 +3552,7 @@ CONFIG_FB_TILEBLITTING=y
 # CONFIG_FB_SIMPLE is not set
 # CONFIG_FB_SSD1307 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
-CONFIG_LCD_CLASS_DEVICE=m
+CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_L4F00242T03 is not set
 # CONFIG_LCD_LMS283GF05 is not set
 # CONFIG_LCD_LTV350QV is not set
