--- a/arch/arm64/configs/A72_c12.1_mod_defconfig
+++ b/arch/arm64/configs/A72_c12.1_mod_defconfig
@@ -335,9 +335,9 @@ CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
-# CONFIG_MODULE_FORCE_LOAD is not set
+CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
-# CONFIG_MODULE_FORCE_UNLOAD is not set
+CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 CONFIG_MODULE_SIG=y
@@ -2287,6 +2287,7 @@ CONFIG_USB_NET_ZAURUS=y
 # CONFIG_USB_NET_CH9200 is not set
 CONFIG_WLAN=y
 CONFIG_WLAN_DRV_BUILD_IN=y
+CONFIG_MTK_EXTRA_CONN_DRV_BUILD_IN=y
 # CONFIG_WIRELESS_WDS is not set
 CONFIG_WLAN_VENDOR_ADMTEK=y
 CONFIG_WLAN_VENDOR_ATH=y
