--- a/drivers/misc/mediatek/connectivity/bt/mt66xx/btif/Makefile
+++ b/drivers/misc/mediatek/connectivity/bt/mt66xx/btif/Makefile
@@ -18,22 +18,8 @@ endif
 # Force build fail on modpost warning
 KBUILD_MODPOST_FAIL_ON_WARNINGS := y
 
-# platform
-
-ifeq ($(CONFIG_WLAN_DRV_BUILD_IN),y)
-  $(info build-in mode!)
-  $(info _MTK_BT_CHIP = $(_MTK_BT_CHIP))
-  # _MTK_BT_CHIP comes from conninfra setting
-  BT_PLATFORM = $(patsubst MTK_CONSYS_MT%,%,$(strip $(_MTK_BT_CHIP)))
-endif
-
-
-$(info $(LOG_TAG) TARGET_BUILD_VARIANT = $(TARGET_BUILD_VARIANT))
-ifeq ("$(TARGET_BUILD_VARIANT)","user")
-    ccflags-y += -D FW_LOG_DEFAULT_ON=0
-else
-    ccflags-y += -D FW_LOG_DEFAULT_ON=1
-endif
+ccflags-y += -D FW_LOG_DEFAULT_ON=0
+ccflags-y += -D BUILD_QA_DBG=0
 
 
 ccflags-y += -D CONNAC20_CHIPID=$(BT_PLATFORM)
@@ -72,9 +58,9 @@ ccflags-y += -D CONFIG_MP_WAKEUP_SOURCE_SYSFS_STAT=1
 # ---------------------------------------------------
 # Include Path
 # ---------------------------------------------------
-CONN_INFRA_SRC := $(TOP)/vendor/mediatek/kernel_modules/connectivity/conninfra
-CONNFEM_SRC := $(TOP)/vendor/mediatek/kernel_modules/connectivity/connfem
-WMT_SRC := $(TOP)/vendor/mediatek/kernel_modules/connectivity/common
+CONN_INFRA_SRC := $(srctree)/drivers/misc/mediatek/connectivity/conninfra
+CONNFEM_SRC := $(srctree)/drivers/misc/mediatek/connectivity/connfem
+WMT_SRC := $(srctree)/drivers/misc/mediatek/connectivity/common
 BTIF_SRC := $(srctree)/drivers/misc/mediatek/btif
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/connectivity/common
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/mt-plat/
