--- a/drivers/misc/mediatek/connectivity/connfem/Kbuild
+++ b/drivers/misc/mediatek/connectivity/connfem/Kbuild
@@ -23,12 +23,7 @@ ccflags-y += -Werror
 ###############################################################################
 # Compile Options
 ###############################################################################
-ifneq ($(TARGET_BUILD_VARIANT), user)
-    ccflags-y += -D CONNFEM_DBG=1
-else
-    ccflags-y += -D CONNFEM_DBG=0
-endif
-
+ccflags-y += -D CONNFEM_DBG=0
 
 ###############################################################################
 # Include Paths
@@ -42,7 +37,7 @@ ccflags-y += -I$(KO_CODE_PATH)/include
 # ConnFem Module
 ###############################################################################
 MODULE_NAME := connfem
-obj-m += $(MODULE_NAME).o
+obj-y += $(MODULE_NAME).o
 
 $(MODULE_NAME)-objs += connfem_module.o
 $(MODULE_NAME)-objs += connfem_api.o
