--- a/arch/arm64/configs/A72_c12.1_mod_defconfig
+++ b/arch/arm64/configs/A72_c12.1_mod_defconfig
@@ -288,7 +288,7 @@ CONFIG_THIN_ARCHIVES=y
 # CONFIG_ARCH_SUPPORTS_THINLTO is not set
 # CONFIG_THINLTO is not set
 CONFIG_LTO_NONE=y
-# CONFIG_LTO_CLAN is not set
+# CONFIG_LTO_CLANG is not set
 CONFIG_CFI=y
 # CONFIG_CFI_PERMISSIVE is not set
 CONFIG_CFI_CLANG=y
@@ -1198,7 +1198,7 @@ CONFIG_NFC=y
 CONFIG_OPLUS_NFC=y
 CONFIG_NFC_PN553_DEVICES=y
 CONFIG_NXP_P73_DEVICES=y
-CONFIG_ST_NFC_CHIP_SUPPORT=y
+# CONFIG_ST_NFC_CHIP_SUPPORT is not set
 CONFIG_NFC_ST54_SPI=y
 # CONFIG_PSAMPLE is not set
 # CONFIG_NET_IFE is not set
@@ -1862,13 +1862,13 @@ CONFIG_MTK_CHIP=y
 # MTK load balance and schedule enhancement
 #
 CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT=y
-# CONFIG_MTK_SCHED_INTEROP is not set
+CONFIG_MTK_SCHED_INTEROP=y
 # CONFIG_MTK_SCHED_TRACE is not set
 
 #
 # MTK Energy Aware Scheduler Plus
 #
-# CONFIG_MTK_SCHED_EAS_POWER_SUPPORT is not set
+CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
 # CONFIG_MTK_SCHED_MULTI_GEARS is not set
 
 #
@@ -1879,14 +1879,14 @@ CONFIG_SCHED_HMP_PRIO_FILTER=y
 CONFIG_SCHED_HMP_PRIO_FILTER_VAL=5
 # CONFIG_HMP_FREQUENCY_INVARIANT_SCALE is not set
 CONFIG_SCHED_HMP_PLUS=y
-# CONFIG_MTK_SCHED_BOOST is not set
+CONFIG_MTK_SCHED_BOOST=y
 
 #
 # MTK runqueue statistic calculation
 #
-# CONFIG_MTK_SCHED_RQAVG_KS is not set
-# CONFIG_MTK_SCHED_RQAVG_US is not set
-# CONFIG_MTK_SCHED_CPULOAD is not set
+CONFIG_MTK_SCHED_RQAVG_KS=y
+CONFIG_MTK_SCHED_RQAVG_US=y
+CONFIG_MTK_SCHED_CPULOAD=y
 # CONFIG_MTK_SCHED_SYSHINT is not set
 # CONFIG_MTK_RT_THROTTLE_MON is not set
 CONFIG_MTK_AUDIO_IPI=y
@@ -1944,7 +1944,7 @@ CONFIG_MTK_LOAD_TRACKER=y
 CONFIG_MTK_CPU_CTRL_CFP=y
 CONFIG_MTK_PERF_OBSERVER=y
 CONFIG_MTK_RESYM=y
-# CONFIG_MTK_FPSGO_V3 is not set
+CONFIG_MTK_FPSGO_V3=y
 CONFIG_MTK_EARA_THERMAL=y
 # CONFIG_MTK_EARA_AI is not set
 CONFIG_MTK_GBE=y
@@ -1958,7 +1958,7 @@ CONFIG_MTK_PERF_TRACKER=y
 # CONFIG_MTK_LOWMEM_HINT is not set
 CONFIG_MTK_SKB_OWNER=y
 # CONFIG_MTK_CORE_CTL is not set
-CONFIG_MTK_TASK_TURBO=y
+# CONFIG_MTK_TASK_TURBO is not set
 
 #
 # Memory configs
@@ -2145,7 +2145,7 @@ CONFIG_DM_SNAPSHOT=y
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
 # CONFIG_DM_VERITY is not set
-CONFIG_DM_VERITY_FEC=y
+# CONFIG_DM_VERITY_FEC is not set
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
 # CONFIG_DM_INTEGRITY is not set
@@ -5539,7 +5539,7 @@ CONFIG_PROBE_EVENTS=y
 # CONFIG_RING_BUFFER_STARTUP_TEST is not set
 # CONFIG_TRACE_EVAL_MAP_FILE is not set
 CONFIG_TRACING_EVENTS_GPIO=y
-# CONFIG_MTK_SCHED_TRACERS is not set
+CONFIG_MTK_SCHED_TRACERS=y
 # CONFIG_MTK_FTRACE_DEFAULT_ENABLE is not set
 # CONFIG_MTK_KERNEL_MARKER is not set
 # CONFIG_DMA_API_DEBUG is not set
