--- a/arch/arm64/configs/k6853v1_64_defconfig
+++ b/arch/arm64/configs/k6853v1_64_defconfig
@@ -23,7 +23,12 @@ CONFIG_KALLSYMS_ALL=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_KPROBES=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
-CONFIG_LTO_CLANG=y
+# CONFIG_LTO_CLANG is not set
+# CONFIG_LTO is not set
+# CONFIG_ARCH_SUPPORTS_LTO_CLANG is not set
+# CONFIG_ARCH_SUPPORTS_THINLTO is not set
+# CONFIG_THINLTO is not set
+CONFIG_LTO_NONE=y
 CONFIG_CFI_CLANG=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_BLK_DEV_BSG is not set
@@ -574,3 +579,21 @@ CONFIG_OPLUS_FEATURE_STATS_CALC=y
 
 CONFIG_MAPPED_PROTECT=y
 CONFIG_KERNEL_LOCK_OPT=y
+
+# WLAN
+CONFIG_WLAN=y
+CONFIG_WLAN_DRV_BUILD_IN=y
+CONFIG_MTK_EXTRA_CONN_DRV_BUILD_IN=y
+
+# BT
+CONFIG_BT=y
+
+# NFC
+CONFIG_NFC=y
+CONFIG_OPLUS_NFC=y
+CONFIG_NFC_PN553_DEVICES=y
+CONFIG_NXP_P73_DEVICES=y
+# CONFIG_ST_NFC_CHIP_SUPPORT is not set
+CONFIG_NFC_ST54_SPI=y
+CONFIG_NFC_CHIP_SUPPORT=y
+CONFIG_MTK_NFC_CLKBUF_ENABLE=y
